fix: adds support for dark mode icons from generate-assets

--- a/src/static/styles/ui.scss
+++ b/src/static/styles/ui.scss
@@ -1312,6 +1312,11 @@ a.ui-button--link,
 
 // Dark Icon management
 
+.ui-img-dark {
+    display: block;
+}
 .ui-img-dark > img {
     display: block;
+    max-width: 100%;
+    margin: 0 auto;
 }
